<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page3_bg" >

    <TextView
        android:id="@+id/subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:gravity="start"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrl_quesion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/subject"
        android:layout_marginTop="30dp"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/ques_layout"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_qno"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/q_no"
                android:textColor="#000000"
                android:textSize="@dimen/question_font_size" />

            <TextView
                android:id="@+id/txt_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38dp"
                android:layout_marginStart="38dp"
                android:text="@string/question"
                android:textColor="#000000"
                android:textSize="@dimen/question_font_size" />

            <RelativeLayout
                android:id="@+id/rel_layout_optiona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_question" >

                <TextView
                    android:id="@+id/txt_optiona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/option_a"
                    android:textColor="#000000"
                    android:textSize="@dimen/question_font_size" />

                <ImageView
                    android:id="@+id/img_optiona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/page3_options" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_layout_optionb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_layout_optiona" >

                <TextView
                    android:id="@+id/txt_optionb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="27dp"
                    android:text="@string/option_b"
                    android:textColor="#000000"
                    android:textSize="@dimen/question_font_size" />

                <ImageView
                    android:id="@+id/img_optionb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/page3_options" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_layout_optionc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_layout_optionb" >

                <TextView
                    android:id="@+id/txt_optionc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/option_c"
                    android:textColor="#000000"
                    android:textSize="@dimen/question_font_size" />

                <ImageView
                    android:id="@+id/img_optionc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/page3_options" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_layout_optiond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_layout_optionc" >

                <TextView
                    android:id="@+id/txt_optiond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="27dp"
                    android:text="@string/option_d"
                    android:textColor="#000000"
                    android:textSize="@dimen/question_font_size" />

                <ImageView
                    android:id="@+id/img_optiond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/page3_options" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_layout_optiond"
                android:layout_centerInParent="true"
                android:layout_marginTop="40dp"
                android:text="@string/check_answer" />

            <Button
                android:id="@+id/btn_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_check"
                android:layout_centerInParent="true"
                android:layout_marginBottom="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/info" />
        </RelativeLayout>
    </ScrollView>

    <!--
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_Unit_ID" >
    </com.google.android.gms.ads.AdView>
    -->

</RelativeLayout>